--- a/server/assets/app/css/pages/test_run.css
+++ b/server/assets/app/css/pages/test_run.css
@@ -211,7 +211,7 @@
       & [data-part="label"] {
         display: flex;
         align-items: center;
-        gap: var(--noora-spacing-3);
+        gap: var(--noora-spacing-4);
       }
     }
   }
